Fix small bug on mobile devices

--- a/style.css
+++ b/style.css
@@ -81,6 +81,8 @@ body {
   font-size: clamp(1.5rem, 1.2143rem + 1.1429vw, 2rem);
   font-weight: bold;
   color: var(--dark);
+  padding-inline-end: 3rem;
+  text-wrap: balance;
 }
 
 .title-500 {
